--- a/AndroidTrivia-Starter/app/src/main/res/layout/activity_main.xml
+++ b/AndroidTrivia-Starter/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?><!--
-
-  -->
+<?xml version="1.0" encoding="utf-8"?>
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/drawerLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -17,7 +20,8 @@
                 android:layout_height="match_parent"
                 app:navGraph="@navigation/navigation"
                 app:defaultNavHost="true" />
-
         </LinearLayout>
 
+
+    </androidx.drawerlayout.widget.DrawerLayout>
 </layout>
